syntax = "proto3";
option go_package = "./proto";

message LoginReq {
    string username = 1;
    string namespace = 3;
    int32 projectId = 4;
}

message LoginResp {
    int64 userId = 1;
    repeated int64 permissions = 2;
    int32 projectId = 3;
    string namespace = 4;
    string password = 5;
}

service Login {
    rpc Login(LoginReq) returns (LoginResp) {}
}
